linked submit button, no output

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Salary Calculator</title>
 </head>
 <body>
-    
+    <input type="text" placeholder="First Name">
+    <input type="text" placeholder="Last Name">
+    <input type="number" placeholder="ID Number">
+    <input type="text" placeholder="Job Title">
+    <input type="number" placeholder="Annual Salary">
+    <button id="submitButton">Submit</button>
 </body>
 </html>
+
+
+<!-- 
+Create a delete button that removes an employee from the DOM. 
+For Base mode, it does **not** need to remove that Employee's salary from the reported total. -->
