linked inputs to DOM by submit button

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Salary Calculator</title>
 </head>
 <body>
-    <input type="text" placeholder="First Name">
-    <input type="text" placeholder="Last Name">
-    <input type="number" placeholder="ID Number">
-    <input type="text" placeholder="Job Title">
-    <input type="number" placeholder="Annual Salary">
+    <input type="text" placeholder="First Name" id="firstNameIn">
+    <input type="text" placeholder="Last Name" id="lastNameIn">
+    <input type="number" placeholder="ID Number" id="idIn">
+    <input type="text" placeholder="Job Title" id="jobTitleIn">
+    <input type="number" placeholder="Annual Salary" id="annualSalaryIn">
     <button id="submitButton">Submit</button>
 </body>
 </html>
