--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <input type="text" placeholder="Job Title" id="jobTitleIn">
     <input type="number" placeholder="Annual Salary" id="annualSalaryIn">
     <button id="submitButton">Submit</button>
+    <h2 id="totalMonthly">Total Monthly:</h2>
 </body>
 </html>
 
