delete employee button added but not functioning yet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input type="text" placeholder="Job Title" id="jobTitleIn">
     <input type="number" placeholder="Annual Salary" id="annualSalaryIn">
     <button id="submitButton">Submit</button>
+    <ul id="employeesList"></ul>
     <h2 id="totalMonthly">Total Monthly:</h2>
 </body>
 </html>
